<?xml version="1.0"?>
<package>
  <name>topic_state</name>
  <version>0.0.1</version>
  <description>Use topics to generate pulse trains, other stuff
  </description>
  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD3</license>
  <url type="website">https://github.com/lucasw/topic_state</url>
  <author email="wsacul@gmail.com">Lucas Walter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>ddynamic_reconfigure</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
